Fix chapter description overflow on small screen sizes

--- a/index.css
+++ b/index.css
@@ -355,8 +355,31 @@ main {
   color: var(--accent-fg-secondary);
 }
 
-/* TODO: fix details > summary overflow on small screens (wrap description) */
 @media screen and (max-width: 960px) {
+  .chapters summary p {
+    grid-area: 2 / 1;
+    padding-left: 0;
+    padding-top: 0.2em;
+    margin-top: 0.5em;
+    transition: margin-bottom 200ms ease-in-out, opacity 200ms ease-in-out;
+  }
+
+  .chapters details[open] summary p {
+    transform: none;
+    margin-bottom: -100%;
+    opacity: 0;
+  }
+
+  .chapters summary p::before {
+    top: 0;
+    width: 100%;
+    height: 0;
+  }
+
+  .chapters summary::after {
+    grid-row-end: span 2;
+  }
+
   .sections {
     display: flex;
     flex-direction: column;
